# vx

./: $null  .clinerules  .cursorrules  .git-hooks-config.ps1  .gitattributes  .gitignore  .gitmessage  .goreleaser.yml  .goreleaser.yml.backup  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  .typos.toml  .vx.toml  .windsurfrules  ACTION_PLAN.md  AGENTS.md  CHANGELOG.md  CHANGELOG_CDN_FALLBACK.md  CLAUDE.md  CLI_COMMAND_REUSE_ANALYSIS.md  CLI_COMMAND_REUSE_ANALYSIS_COMPLETED.md  CLI_IMPROVEMENTS.md  CODE_OF_CONDUCT.md  COMMIT_MSG  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  FINAL_TEST_REPORT.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MODULAR_ARCHITECTURE.md  Makefile  POST_MERGE_RELEASE_GUIDE.md  PROJECT_STATUS.md  PR_BODY.md  PR_DESCRIPTION.md  README.md  README_zh.md  (+41 more)
crates/vx-args/: Cargo.toml
crates/vx-args/src/: error.rs  help.rs  interpolation.rs  lib.rs  parser.rs  types.rs
crates/vx-benchmark/: Cargo.toml
crates/vx-benchmark/src/: lib.rs
crates/vx-bridge/: Cargo.toml
crates/vx-bridge/src/: config.rs  deployer.rs  embedded.rs  finder.rs  lib.rs  runner.rs
crates/vx-bridge/tests/: deployer_tests.rs  embedded_tests.rs  finder_tests.rs
crates/vx-cache/: Cargo.toml
crates/vx-cache/src/: bin_dir.rs  download.rs  exec_path.rs  file.rs  lib.rs  mode.rs  stats.rs  time.rs
crates/vx-cache/tests/: exec_path_tests.rs  file_cache_tests.rs
crates/vx-cli/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/vx-cli/src/: cli.rs  cli_tests.rs  config.rs  error_handler.rs  lib.rs  main.rs  npm_global_bridge.rs  output.rs  plugin_tests.rs  registry.rs  suggestions.rs  system_tools.rs  test_utils.rs  tracing_setup.rs  ui.rs  update_checker.rs
crates/vx-cli/tests/: add_command_tests.rs  ai_setup_tests.rs  boundary_e2e_tests.rs  capabilities_tests.rs  cli_integration_tests.rs  cli_parsing_tests.rs  cli_tests.rs  common_timeout_tests.rs  consistency_e2e_tests.rs  dependency_display.rs  dev_environment_tests.rs  e2e_tests.rs  error_handler_tests.rs  examples_integration_tests.rs  execute_tests.rs  execute_unit_tests.rs  global_command_shim_e2e_tests.rs  global_shim_command_tests.rs  headroom_cli_tests.rs  headroom_proxy_tests.rs  headroom_setup_tests.rs  info_tests.rs  init_detection_tests.rs  install_bundled_runtime_tests.rs  install_fix_tests.rs  lifecycle_e2e_tests.rs  npm_global_bridge_tests.rs  output_tests.rs  plugin_tests.rs  real_tool_tests.rs  real_world_scenarios.rs  runtime_tester_timeout_tests.rs  script_generator_tests.rs  self_update_tests.rs  setup_tests.rs  sync_integration_tests.rs  test_utils.rs  tool_crud_tests.rs  tool_e2e_tests.rs  tool_execution_tests.rs  (+1 more)
crates/vx-config/: CHANGELOG.md  Cargo.toml  README.md  config.toml
crates/vx-config/presets/: fullstack.toml  go.toml  node.toml  python.toml  rust.toml
crates/vx-config/src/: config.rs  container.rs  defaults.rs  dependencies.rs  detection.rs  error.rs  hooks.rs  inheritance.rs  lib.rs  manager.rs  migration.rs  parser.rs  parsers.rs  remote.rs  security.rs  setup_pipeline.rs  team.rs  telemetry.rs  testing.rs  types.rs  validation.rs  version_parser.rs
crates/vx-config/tests/: dependencies_tests.rs  fetcher_url_tests.rs  hooks_tests.rs  init_generated_config_tests.rs  migration_tests.rs  parser_tests.rs  platform_filter_tests.rs  remote_tests.rs  security_tests.rs  services_tests.rs  team_tests.rs  telemetry_tests.rs  test_config_tests.rs  testing_tests.rs  validation_tests.rs
crates/vx-console/: Cargo.toml
crates/vx-console/src/: format.rs  interact.rs  lib.rs  output.rs  progress.rs  shell.rs  style.rs  task.rs  term.rs  test_support.rs
crates/vx-console/tests/: console_tests.rs  format_tests.rs  progress_tests.rs  shell_tests.rs  style_tests.rs  task_tests.rs  term_tests.rs  test_support_tests.rs
crates/vx-core/: CHANGELOG.md  Cargo.toml  README.md
crates/vx-core/src/: async_manager.rs  command.rs  config.rs  config_figment.rs  config_figment_tests.rs  core.rs  downloader.rs  environment.rs  error.rs  global_tool_manager.rs  http.rs  install_configs.rs  installer.rs  installer_adapter.rs  lib.rs  package_manager.rs  platform.rs  plugin.rs  proxy.rs  registry.rs  shim_integration.rs  shimexe_integration.rs  symlink_venv.rs  tool.rs  tool_utils.rs  url_builder.rs  venv.rs  venv_tests.rs  version.rs  version_manager.rs  version_parser.rs  version_utils.rs
crates/vx-core/tests/: config_tests.rs  core_tests.rs  platform_tests.rs  project_sync_tests.rs
crates/vx-dependency/: CHANGELOG.md  Cargo.toml  README.md
crates/vx-dependency/src/: dependency.rs  graph.rs  lib.rs  resolver.rs  types.rs  version.rs
crates/vx-dependency/tests/: integration_tests.rs
crates/vx-download/: Cargo.toml
crates/vx-download/examples/: basic_download.rs  config_driven_sources_test.rs  performance_monitoring_test.rs  source_extension_test.rs  turbo_cdn_test.rs  unified_config_test.rs  url_optimization_test.rs  vx_config_test.rs
crates/vx-download/src/: cache.rs  error.rs  lib.rs  manager.rs  monitoring.rs  progress.rs  smart_cache.rs  sources.rs  vx_config.rs
crates/vx-ecosystem-pm/: Cargo.toml
crates/vx-ecosystem-pm/src/: error.rs  lib.rs  traits.rs  types.rs  utils.rs
crates/vx-ecosystem-pm/tests/: lib_tests.rs
crates/vx-env/: Cargo.toml
crates/vx-env/src/: assets.rs  builder.rs  context.rs  env_assembler.rs  error.rs  executor.rs  lib.rs  session.rs  spawner.rs  (+2 more)
crates/vx-executor/: Cargo.toml
crates/vx-extension/: Cargo.toml
crates/vx-installer/: CHANGELOG.md  Cargo.toml  README.md
crates/vx-manifest/: Cargo.toml
crates/vx-metrics/: Cargo.toml
crates/vx-migration/: Cargo.toml
crates/vx-msbuild-bridge/: Cargo.toml
crates/vx-output-filter/: Cargo.toml
crates/vx-paths/: CHANGELOG.md  Cargo.toml  README.md
crates/vx-plugin/: CHANGELOG.md  Cargo.toml  README.md
crates/vx-project-analyzer/: Cargo.toml
crates/vx-resolver/: Cargo.toml
crates/vx-runtime/: Cargo.toml
crates/vx-runtime-archive/: Cargo.toml
crates/vx-runtime-core/: Cargo.toml
crates/vx-runtime-http/: Cargo.toml
crates/vx-sdk/: Cargo.toml  README.md
(+2379 files in other folders)
