[workspace]
members = [
  "crates/vx-core",
  "crates/vx-cache",
  "crates/vx-versions",
  "crates/vx-starlark",
  "crates/vx-runtime-core",
  "crates/vx-runtime-archive",
  "crates/vx-runtime-http",
  "crates/vx-runtime",
  "crates/vx-version-fetcher",
  "crates/vx-resolver",
  "crates/vx-manifest",
  "crates/vx-paths",
  "crates/vx-installer",
  "crates/vx-config",
  "crates/vx-setup",
  "crates/vx-migration",
  "crates/vx-env",
  "crates/vx-extension",
  "crates/vx-args",
  "crates/vx-project-analyzer",
  "crates/vx-console",
  "crates/vx-system-pm",
  "crates/vx-ecosystem-pm",
  "crates/vx-shim",
  "crates/vx-metrics",
  "crates/vx-cli",
  # Providers (active - have Cargo.toml)
  "crates/vx-providers/bun",
  "crates/vx-providers/rcedit",
  "crates/vx-providers/choco",
  "crates/vx-providers/brew",
  # Build tools
  "crates/vx-providers/make",
  "crates/vx-providers/nasm",
  # Python runtime
  "crates/vx-providers/python",
  # MSVC Build Tools (Windows-only)
  "crates/vx-providers/msvc",
  # Media processing tools
  "crates/vx-providers/ffmpeg",
  "crates/vx-providers/imagemagick",
  # MSBuild
  "crates/vx-providers/msbuild",
  # 7-Zip file archiver
  "crates/vx-providers/7zip",
  # Actionforge runner
  "crates/vx-providers/actrun",
  # Dockerfile linter
  "crates/vx-providers/hadolint",
  # Meson build system (PyPI package alias)
  "crates/vx-providers/meson",
  # Conan C/C++ package manager (PyPI package alias)
  "crates/vx-providers/conan",
  # xmake build system
  "crates/vx-providers/xmake",
  # WiX Toolset (Windows installer)
  "crates/vx-providers/wix",
  # curl (system detection only)
  "crates/vx-providers/curl",
  # Rez package manager (Python-based)
  "crates/vx-providers/rez",
  # Cloud CLI tools
  "crates/vx-providers/awscli",
  "crates/vx-providers/azcli",
  "crates/vx-providers/gcloud",
  # Container tools
  "crates/vx-providers/podman",

  # Kubernetes tools
  "crates/vx-providers/kubectl",
  "crates/vx-providers/helm",
  # CLI utilities
  "crates/vx-providers/bat",
  "crates/vx-providers/fd",
  "crates/vx-providers/fzf",
  "crates/vx-providers/jq",
  "crates/vx-providers/yq",
  "crates/vx-providers/ripgrep",
  # Build tools
  "crates/vx-providers/cmake",
  "crates/vx-providers/ninja",
  "crates/vx-providers/protoc",
  # Language runtimes
  "crates/vx-providers/deno",
  "crates/vx-providers/java",
  "crates/vx-providers/dotnet",
  "crates/vx-providers/rust",
  "crates/vx-providers/zig",
  # Package managers
  "crates/vx-providers/pnpm",
  "crates/vx-providers/nuget",
  # DevOps tools
  "crates/vx-providers/terraform",
  "crates/vx-providers/gh",
  "crates/vx-providers/release-please",
  # Shell and terminal tools
  "crates/vx-providers/bash",
  "crates/vx-providers/pwsh",
  "crates/vx-providers/starship",
  # Task runners
  "crates/vx-providers/task",
  "crates/vx-providers/dagu",
  # VCS tools
  "crates/vx-providers/jj",
  # AI tools
  "crates/vx-providers/ollama",
  # IDE tools
  "crates/vx-providers/vscode",
  # System tools
  "crates/vx-providers/systemctl",
  "crates/vx-providers/xcodebuild",

  # Build cache
  "crates/vx-providers/sccache",
  "crates/vx-providers/ccache",
  "crates/vx-providers/buildcache",
  # Node.js build cache (monorepo tools)
  "crates/vx-providers/nx",
  "crates/vx-providers/turbo",
  "crates/vx-providers/vite",
  # Python ecosystem tools
  "crates/vx-providers/pre-commit",
  "crates/vx-providers/spack",
  # Generic command bridge framework
  "crates/vx-bridge",
  # Workspace-hack crate (managed by cargo-hakari, reduces duplicate dependency compilations)
  "crates/workspace-hack",
  # MSBuild bridge (used by MSVC provider for node-gyp compatibility)
  "crates/vx-msbuild-bridge",
]
resolver = "2"

# Root package for integration tests
[package]
name = "vx"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

# Main binary
[[bin]]
name = "vx"
path = "src/main.rs"

[dependencies]
vx-cli = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
workspace-hack = { version = "0.1", path = "crates/workspace-hack" }

[features]
default = ["cdn-acceleration", "self-update"]
# CDN acceleration for faster downloads in China (uses rustls-tls, no OpenSSL required)
cdn-acceleration = ["vx-cli/cdn-acceleration"]
# Self-update via axoupdater (cargo-dist receipt-based fast path)
self-update = ["vx-cli/self-update"]

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
# assert_cmd for cross-platform CLI testing
assert_cmd = { workspace = true }
predicates = { workspace = true }
# Test dependencies for integration tests
vx-core = { workspace = true }
walkdir.workspace = true
serde_json = { workspace = true }
rstest = "0.26"


[workspace.package]
version = "0.8.14"                                                # x-release-please-version
edition = "2024"
description = "Universal Development Tool Manager"
license = "MIT"
repository = "https://github.com/loonghao/vx"
homepage = "https://github.com/loonghao/vx"
documentation = "https://github.com/loonghao/vx"
authors = ["Hal <hal.long@outlook.com>"]
keywords = ["version", "manager", "development", "tools", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.93.0"


[workspace.dependencies]
# Internal crates
vx-core = { path = "crates/vx-core" }
vx-cache = { path = "crates/vx-cache" }
vx-starlark = { path = "crates/vx-starlark" }
vx-star-metadata = { path = "crates/vx-star-metadata" }
starlark = { version = "0.13" }
vx-runtime = { path = "crates/vx-runtime" }
vx-runtime-core = { path = "crates/vx-runtime-core" }
vx-runtime-archive = { path = "crates/vx-runtime-archive" }
vx-runtime-http = { path = "crates/vx-runtime-http" }
vx-versions = { path = "crates/vx-versions" }
vx-version-fetcher = { path = "crates/vx-version-fetcher" }
vx-resolver = { path = "crates/vx-resolver" }
vx-paths = { path = "crates/vx-paths" }
vx-installer = { path = "crates/vx-installer" }
vx-config = { path = "crates/vx-config" }
vx-setup = { path = "crates/vx-setup" }
vx-migration = { path = "crates/vx-migration" }
vx-env = { path = "crates/vx-env" }
vx-extension = { path = "crates/vx-extension" }
vx-project-analyzer = { path = "crates/vx-project-analyzer" }
vx-system-pm = { path = "crates/vx-system-pm" }
vx-ecosystem-pm = { path = "crates/vx-ecosystem-pm" }
vx-shim = { path = "crates/vx-shim" }
vx-metrics = { path = "crates/vx-metrics" }
vx-cli = { path = "crates/vx-cli" }
# Active providers (have Cargo.toml)
vx-provider-bun = { path = "crates/vx-providers/bun" }
vx-provider-rcedit = { path = "crates/vx-providers/rcedit" }
vx-provider-choco = { path = "crates/vx-providers/choco" }
vx-provider-brew = { path = "crates/vx-providers/brew" }
vx-provider-make = { path = "crates/vx-providers/make" }
vx-provider-nasm = { path = "crates/vx-providers/nasm" }
vx-provider-python = { path = "crates/vx-providers/python" }
vx-provider-msvc = { path = "crates/vx-providers/msvc" }
vx-provider-ffmpeg = { path = "crates/vx-providers/ffmpeg" }
vx-provider-imagemagick = { path = "crates/vx-providers/imagemagick" }
vx-provider-msbuild = { path = "crates/vx-providers/msbuild" }
vx-provider-7zip = { path = "crates/vx-providers/7zip" }
vx-provider-actrun = { path = "crates/vx-providers/actrun" }
vx-provider-hadolint = { path = "crates/vx-providers/hadolint" }
vx-provider-meson = { path = "crates/vx-providers/meson" }
vx-provider-conan = { path = "crates/vx-providers/conan" }
vx-provider-xmake = { path = "crates/vx-providers/xmake" }
vx-provider-wix = { path = "crates/vx-providers/wix" }
vx-provider-curl = { path = "crates/vx-providers/curl" }
vx-provider-rez = { path = "crates/vx-providers/rez" }
# Cloud CLI tools
vx-provider-awscli = { path = "crates/vx-providers/awscli" }
vx-provider-azcli = { path = "crates/vx-providers/azcli" }
vx-provider-gcloud = { path = "crates/vx-providers/gcloud" }
# Container tools
vx-provider-podman = { path = "crates/vx-providers/podman" }

# Kubernetes tools
vx-provider-kubectl = { path = "crates/vx-providers/kubectl" }
vx-provider-helm = { path = "crates/vx-providers/helm" }
# CLI utilities
vx-provider-bat = { path = "crates/vx-providers/bat" }
vx-provider-fd = { path = "crates/vx-providers/fd" }
vx-provider-fzf = { path = "crates/vx-providers/fzf" }
vx-provider-jq = { path = "crates/vx-providers/jq" }
vx-provider-yq = { path = "crates/vx-providers/yq" }
vx-provider-ripgrep = { path = "crates/vx-providers/ripgrep" }
# Build tools
vx-provider-cmake = { path = "crates/vx-providers/cmake" }
vx-provider-ninja = { path = "crates/vx-providers/ninja" }
vx-provider-protoc = { path = "crates/vx-providers/protoc" }
# Language runtimes
vx-provider-deno = { path = "crates/vx-providers/deno" }
vx-provider-java = { path = "crates/vx-providers/java" }
vx-provider-dotnet = { path = "crates/vx-providers/dotnet" }
vx-provider-rust = { path = "crates/vx-providers/rust" }
vx-provider-zig = { path = "crates/vx-providers/zig" }
# Package managers
vx-provider-pnpm = { path = "crates/vx-providers/pnpm" }
vx-provider-nuget = { path = "crates/vx-providers/nuget" }
# DevOps tools
vx-provider-terraform = { path = "crates/vx-providers/terraform" }
vx-provider-gh = { path = "crates/vx-providers/gh" }
vx-provider-release-please = { path = "crates/vx-providers/release-please" }
# Shell and terminal tools
vx-provider-bash = { path = "crates/vx-providers/bash" }
vx-provider-pwsh = { path = "crates/vx-providers/pwsh" }
vx-provider-starship = { path = "crates/vx-providers/starship" }
# Task runners
vx-provider-task = { path = "crates/vx-providers/task" }
vx-provider-dagu = { path = "crates/vx-providers/dagu" }
# VCS tools
vx-provider-jj = { path = "crates/vx-providers/jj" }
# AI tools
vx-provider-ollama = { path = "crates/vx-providers/ollama" }
# IDE tools
vx-provider-vscode = { path = "crates/vx-providers/vscode" }
# System tools
vx-provider-systemctl = { path = "crates/vx-providers/systemctl" }

vx-provider-xcodebuild = { path = "crates/vx-providers/xcodebuild" }
# Build cache
vx-provider-sccache = { path = "crates/vx-providers/sccache" }
vx-provider-ccache = { path = "crates/vx-providers/ccache" }
vx-provider-buildcache = { path = "crates/vx-providers/buildcache" }
# Node.js build cache (monorepo tools)
vx-provider-nx = { path = "crates/vx-providers/nx" }
vx-provider-turbo = { path = "crates/vx-providers/turbo" }
vx-provider-vite = { path = "crates/vx-providers/vite" }
# Python ecosystem tools
vx-provider-pre-commit = { path = "crates/vx-providers/pre-commit" }
vx-provider-spack = { path = "crates/vx-providers/spack" }
# Version control
vx-provider-git = { path = "crates/vx-providers/git" }
# Go ecosystem
vx-provider-go = { path = "crates/vx-providers/go" }
# Node.js ecosystem
vx-provider-node = { path = "crates/vx-providers/node" }
vx-provider-yarn = { path = "crates/vx-providers/yarn" }
# Build tools
vx-provider-just = { path = "crates/vx-providers/just" }
# Package managers
vx-provider-uv = { path = "crates/vx-providers/uv" }
vx-provider-prek = { path = "crates/vx-providers/prek" }
vx-provider-vcpkg = { path = "crates/vx-providers/vcpkg" }
vx-provider-winget = { path = "crates/vx-providers/winget" }
vx-console = { path = "crates/vx-console" }
vx-manifest = { path = "crates/vx-manifest" }
vx-bridge = { path = "crates/vx-bridge" }
workspace-hack = { path = "crates/workspace-hack" }

# External dependencies
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
toml_edit = "0.24"
# Optimize tokio - only include needed features for better compile times
tokio = { version = "1.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "process",
] }
# HTTP client - use rustls TLS with aws-lc-rs (pure Rust, no OpenSSL dependency)
# reqwest 0.13+ defaults to aws-lc-rs instead of ring, enabling cross-compilation to all platforms
# including aarch64-pc-windows-msvc without assembly compilation issues
# Note: reqwest 0.13 makes form/query optional features, so we need to explicitly enable them
reqwest = { version = "0.13", features = [
  "json",
  "stream",
  "form",
  "rustls",
], default-features = false }

# Force rustls to use aws-lc-rs instead of ring for cross-compilation support
# This is required for aarch64-pc-windows-msvc target where ring's assembly code fails to compile
# ring has platform-specific assembly that doesn't work well with cross-compilation toolchains
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "logging",
  "std",
  "tls12",
] }

# Force rustls-webpki to use aws-lc-rs instead of ring
# This must be consistent with rustls configuration above
rustls-webpki = { version = "0.103", default-features = false, features = [
  "aws-lc-rs",
  "std",
] }
serde_json = "1.0.148"
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
# Optimize figment - only include needed features
figment = { version = "0.10", features = ["toml", "env"] }
which = "8.0"
regex = "1.10"
tempfile = "3.8"
# zip 8.1 - unified version to eliminate duplicate compilation with msvc-kit
# deflate: most common zip compression; zstd: modern fast compression; time: preserve file timestamps
# Disabled: aes-crypto, bzip2, deflate64, ppmd, lzma (rarely used in tool distribution archives)
zip = { version = "8.1", default-features = false, features = ["deflate", "zstd", "time"] }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1.7"
zstd = "0.13"
walkdir = "2.4"
glob = "0.3"
# Optimize chrono - remove serde feature if not needed everywhere
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
indicatif = "0.18"
console = "0.16"
colored = "3.0"
dialoguer = "0.12"
futures-util = "0.3"
# Tracing ecosystem - standard for structured logging and spans
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# Requires Rust 2024 Edition (workspace edition = "2024", rust-version = "1.93.0")
tracing-indicatif = "0.3.14"

# Lazy static initialization
once_cell = "1.19"

# Semantic versioning
semver = "1.0"

# Self-replacement for binary updates (handles Windows exe locking)
self-replace = "1.5"

# Self-updater library for cargo-dist integration
# axoupdater 0.10+ uses axoasset 2.0+ which uses reqwest 0.13 with aws-lc-rs (no ring dependency)
# This resolves the reqwest 0.12/0.13 duplicate version issue
axoupdater = { version = "0.10", default-features = false, features = ["github_releases"] }

# Windows system calls for file operations
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

# SHA256 checksum verification
sha2 = "0.10"

# Embed static assets in binary
rust-embed = "8.5"

# Retry with backoff - similar to Python's tenacity
backon = "1.6.0"

# Testing frameworks and utilities
rstest = "0.26"
tokio-test = "0.4"
test-case = "3.3"
pretty_assertions = "1.4"
mockall = "0.13"
wiremock = "0.6"
serial_test = "3.0"
assert_cmd = "2.0"
predicates = "3.1"


# Optimize compilation times
[profile.dev]
# Enable some optimizations for dependencies in debug mode
opt-level = 1
# Reduce debug info for faster compilation
debug = 1
# Enable incremental compilation for faster rebuilds
incremental = true

[profile.test]
# Inherit from dev but with faster linking
inherits = "dev"
# Reduce debug info for faster test compilation
debug = 0
# Faster linking with fewer codegen units
codegen-units = 16

[profile.release]
# Full optimizations for release
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Fast compilation profile for development
[profile.dev-fast]
inherits = "dev"
opt-level = 0
debug = false
incremental = true

# PGO optimization profiles
[profile.release-pgo]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"

# Profile for PGO data collection
[profile.pgo-gen]
inherits = "release"
debug = 1
lto = false

# cargo-dist: Profile for dist builds (thin LTO for faster builds)
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# A GitHub repo to push Homebrew formulas to
tap = "loonghao/homebrew-vx"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".zip"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Checksums to generate for each App
checksum = "sha256"
# GitHub release settings
github-releases = true
# Whether to enable GitHub Attestations
github-attestations = true
# Whether to install an updater program
install-updater = false
# Generate install receipts for axoupdater library integration
install-receipt = true
# Extra static files to include in each App (path relative to this Cargo.toml's dir)
include = ["LICENSE", "README.md", "CHANGELOG.md"]
# Whether to publish prereleases to package managers
publish-prereleases = false
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
# Whether dist should create a Github Release or use an existing draft
create-release = false
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"

# =============================================================================
# Patches to unify duplicate dependency versions
# NOTE: [patch.crates-io] requires git or path, not version.
# The windows-sys version unification would require a fork or overlay.
# Consider using cargo-deny or dependabot to track version drift instead.
# =============================================================================
